fix && feat: fix text overflow bug in blog itembox and connect search blog page to backend

--- a/src/style/output.css
+++ b/src/style/output.css
@@ -884,6 +884,14 @@ input[type="range"]::-moz-range-thumb {
   top: 100%;
 }
 
+.right-2\.5 {
+  right: 0.625rem;
+}
+
+.top-2\.5 {
+  top: 0.625rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -1036,11 +1044,33 @@ input[type="range"]::-moz-range-thumb {
   margin-top: auto;
 }
 
+.mt-1\.5 {
+  margin-top: 0.375rem;
+}
+
+.mt-3\.5 {
+  margin-top: 0.875rem;
+}
+
 .line-clamp-3 {
   overflow: hidden;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
+}
+
+.line-clamp-1 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+}
+
+.line-clamp-2 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
 }
 
 .block {
@@ -1053,6 +1083,10 @@ input[type="range"]::-moz-range-thumb {
 
 .flex {
   display: flex;
+}
+
+.inline-flex {
+  display: inline-flex;
 }
 
 .grid {
@@ -1183,8 +1217,16 @@ input[type="range"]::-moz-range-thumb {
   height: 100vh;
 }
 
+.h-\[168px\] {
+  height: 168px;
+}
+
 .max-h-40 {
   max-height: 10rem;
+}
+
+.max-h-12 {
+  max-height: 3rem;
 }
 
 .min-h-14 {
@@ -1279,6 +1321,10 @@ input[type="range"]::-moz-range-thumb {
 .w-max {
   width: -moz-max-content;
   width: max-content;
+}
+
+.w-12 {
+  width: 3rem;
 }
 
 .min-w-14 {
@@ -1537,6 +1583,16 @@ input[type="range"]::-moz-range-thumb {
   row-gap: 1.5rem;
 }
 
+.gap-x-1\.5 {
+  -moz-column-gap: 0.375rem;
+       column-gap: 0.375rem;
+}
+
+.gap-x-2\.5 {
+  -moz-column-gap: 0.625rem;
+       column-gap: 0.625rem;
+}
+
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1572,6 +1628,10 @@ input[type="range"]::-moz-range-thumb {
 
 .text-ellipsis {
   text-overflow: ellipsis;
+}
+
+.text-clip {
+  text-overflow: clip;
 }
 
 .whitespace-nowrap {
@@ -1682,6 +1742,11 @@ input[type="range"]::-moz-range-thumb {
   border-top-color: rgb(217 217 217 / var(--tw-border-opacity, 1));
 }
 
+.border-b-gray-100 {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(243 244 246 / var(--tw-border-opacity, 1));
+}
+
 .bg-\[\#E5F2E9\] {
   --tw-bg-opacity: 1;
   background-color: rgb(229 242 233 / var(--tw-bg-opacity, 1));
@@ -1738,6 +1803,10 @@ input[type="range"]::-moz-range-thumb {
 
 .bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
+}
+
+.bg-sky-500\/10 {
+  background-color: rgb(14 165 233 / 0.1);
 }
 
 .bg-gradient-to-b {
@@ -1877,6 +1946,16 @@ input[type="range"]::-moz-range-thumb {
   padding-bottom: 2rem;
 }
 
+.px-1\.5 {
+  padding-left: 0.375rem;
+  padding-right: 0.375rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .pb-10 {
   padding-bottom: 2.5rem;
 }
@@ -1915,6 +1994,10 @@ input[type="range"]::-moz-range-thumb {
 
 .pt-6 {
   padding-top: 1.5rem;
+}
+
+.pt-2\.5 {
+  padding-top: 0.625rem;
 }
 
 .text-center {
@@ -1995,6 +2078,10 @@ input[type="range"]::-moz-range-thumb {
   line-height: 1;
 }
 
+.leading-\[1px\] {
+  line-height: 1px;
+}
+
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(18 18 18 / var(--tw-text-opacity, 1));
@@ -2053,6 +2140,26 @@ input[type="range"]::-moz-range-thumb {
 .text-gray-700 {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity, 1));
+}
+
+.text-slate-500 {
+  --tw-text-opacity: 1;
+  color: rgb(100 116 139 / var(--tw-text-opacity, 1));
+}
+
+.text-amber-400 {
+  --tw-text-opacity: 1;
+  color: rgb(251 191 36 / var(--tw-text-opacity, 1));
+}
+
+.text-sky-500 {
+  --tw-text-opacity: 1;
+  color: rgb(14 165 233 / var(--tw-text-opacity, 1));
+}
+
+.text-zinc-700 {
+  --tw-text-opacity: 1;
+  color: rgb(63 63 70 / var(--tw-text-opacity, 1));
 }
 
 .placeholder-neutral9::-moz-placeholder {
@@ -2184,6 +2291,11 @@ input[type="range"]::-moz-range-thumb {
 .hover\:bg-neutral2:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(246 246 246 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:text-primary:hover {
+  --tw-text-opacity: 1;
+  color: rgb(65 127 86 / var(--tw-text-opacity, 1));
 }
 
 .disabled\:opacity-50:disabled {
@@ -2932,6 +3044,20 @@ input[type="range"]::-moz-range-thumb {
     margin-top: 90px;
   }
 
+  .lg\:line-clamp-3 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+  }
+
+  .lg\:line-clamp-2 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+  }
+
   .lg\:block {
     display: block;
   }
@@ -3114,6 +3240,13 @@ input[type="range"]::-moz-range-thumb {
     margin-top: 10rem;
   }
 
+  .xl\:line-clamp-3 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+  }
+
   .xl\:block {
     display: block;
   }
@@ -3182,5 +3315,41 @@ input[type="range"]::-moz-range-thumb {
   .xl\:\*\:text-lg > * {
     font-size: 1.125rem;
     line-height: 1.75rem;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .dark\:border {
+    border-width: 1px;
+  }
+
+  .dark\:border-b-gray-700 {
+    --tw-border-opacity: 1;
+    border-bottom-color: rgb(55 65 81 / var(--tw-border-opacity, 1));
+  }
+
+  .dark\:bg-yellow-400\/10 {
+    background-color: rgb(250 204 21 / 0.1);
+  }
+
+  .dark\:text-slate-400 {
+    --tw-text-opacity: 1;
+    color: rgb(148 163 184 / var(--tw-text-opacity, 1));
+  }
+
+  .dark\:text-white {
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+  }
+
+  .dark\:text-yellow-400 {
+    --tw-text-opacity: 1;
+    color: rgb(250 204 21 / var(--tw-text-opacity, 1));
+  }
+
+  .dark\:shadow-none {
+    --tw-shadow: 0 0 #0000;
+    --tw-shadow-colored: 0 0 #0000;
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
 }
